# fullstack-rust-react-natve-banking-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  commitlint.config.cjs  context.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.ai/: manifest.yml
.ai/agents/: architecture.md  code-reviewer.md  committer.md  documenter.md  implementation.md  quality-assurance.md
.ai/policies/: backend-rust.md  delivery-pipeline.md  documentation.md  engineering-principles.md  frontend-react-native.md  frontend-tooling.md  git-and-commits.md  quality-and-security.md
.ai/skills/: architecture-decision-record.md  conventional-commits.md  feature-planning.md  git-commit.md  jsdoc-and-mermaid.md  observability.md  performance-testing.md  react-native-redux-toolkit.md  repository-discovery.md  rtk-query-api.md  rust-api-architecture.md  rust-financial-ledger.md  security-review.md  testing-and-verification.md
.ai/templates/: architecture-handoff.md  code-review-report.md  commit-report.md  documentation-handoff.md  feature-work-item.md  implementation-handoff.md  qa-report.md
.ai/templates/frontend-tooling/: .prettierignore  eslint.config.mjs  husky-setup.sh
.cursor/rules/: 00-ai-governance.mdc  10-delivery-pipeline.mdc  20-react-native.mdc  30-rust-backend.mdc  40-quality-security-git.mdc  40-quality-security-infra.mdc  50-documentation-tooling.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  quality.yml  security.yml
apps/api/: Cargo.toml  deny.toml
apps/api/.config/: nextest.toml
apps/api/crates/adapters-http/: Cargo.toml
apps/api/crates/adapters-http/src/: error.rs  lib.rs  metrics.rs  openapi.rs  state.rs
apps/api/crates/adapters-http/src/handlers/: accounts.rs  auth.rs  feed.rs  health.rs  mod.rs  transfers.rs  users.rs
apps/api/crates/adapters-http/src/middleware/: auth.rs  metrics_auth.rs  mod.rs  rate_limit.rs  request_id.rs  trace_metrics.rs
apps/api/crates/adapters-persistence/: Cargo.toml
apps/api/crates/adapters-persistence/src/: error.rs  lib.rs  mapper.rs
apps/api/crates/adapters-persistence/src/entities/: account_balances.rs  accounts.rs  audit_events.rs  idempotency_requests.rs  ledger_entries.rs  mod.rs  transfers.rs  users.rs
apps/api/crates/adapters-persistence/src/executor/: mod.rs  postgres_transfer_executor.rs
apps/api/crates/adapters-persistence/src/feed/: in_memory_feed_broadcaster.rs  mod.rs
apps/api/crates/adapters-persistence/src/repositories/: account_repository.rs  audit_repository.rs  idempotency_repository.rs  mod.rs  transfer_repository.rs  user_repository.rs
apps/api/crates/application/: Cargo.toml
apps/api/crates/application/src/: auth.rs  dto.rs  feed.rs  lib.rs  ports.rs  transfer.rs  users.rs
apps/api/crates/contracts/: Cargo.toml
apps/api/crates/contracts/src/: lib.rs
apps/api/crates/domain/: Cargo.toml
apps/api/crates/domain/src/: account.rs  audit.rs  currency.rs  errors.rs  idempotency.rs  ledger.rs  lib.rs  money.rs  transfer.rs  user.rs
apps/api/crates/infrastructure/: Cargo.toml
apps/api/crates/infrastructure/src/: auth.rs  config.rs  lib.rs  readiness.rs  telemetry.rs  wiring.rs
apps/api/crates/testkit/: Cargo.toml
apps/api/crates/testkit/src/: app.rs  assertions.rs  http.rs  lib.rs  seed.rs
apps/api/crates/testkit/tests/: auth_http_api_test.rs  feed_http_api_test.rs  ledger_balance_reconciliation_test.rs  ledger_db_immutability_test.rs  metrics_http_api_test.rs  money_conservation_test.rs  transfer_concurrency_extended_test.rs  transfer_concurrency_test.rs  transfer_http_api_test.rs  transfer_idempotency_test.rs  transfer_partial_state_test.rs
apps/api/migrations/: Cargo.toml
apps/api/migrations/src/: lib.rs  m20250707_000001_create_initial_schema.rs
apps/mobile/: app.json  babel.config.js  eslint.config.mjs  index.ts  metro.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/mobile/e2e/: README.md  config.yaml  run-maestro.mjs
apps/mobile/e2e/flows/: 01-launch-login-screen.yaml  02-invalid-login.yaml  03-successful-login.yaml  04-logout.yaml  05-transfer-happy-path.yaml  06-insufficient-funds.yaml  docs-capture.yaml
apps/mobile/e2e/helpers/: reset-to-login.yaml
apps/mobile/e2e/reports/: docs-capture.md
apps/mobile/src/app/: App.tsx  navigation.tsx
apps/mobile/src/pages/: HomePage.test.tsx  HomePage.tsx  LoginPage.test.tsx  LoginPage.tsx  TransferPage.test.tsx  TransferPage.tsx  index.ts
apps/mobile/src/services/: baseApi.test.ts  baseApi.ts  config.ts  index.ts  sse.test.ts  sse.ts
apps/mobile/src/store/: hooks.ts  index.ts  listenerMiddleware.ts
apps/mobile/src/test/: renderTestTree.tsx  renderWithProviders.tsx
docs/ai/adr/: 0001-integer-money-representation.md  001-monorepo-tooling.md  002-hexagonal-rust-backend.md  003-jwt-authentication.md  004-transfer-idempotency.md  005-double-entry-ledger.md  006-sse-global-feed.md  007-redux-mobile-state.md  008-postgresql-concurrency.md  009-observability-stack.md  013-maestro-mobile-e2e.md  ADR-012-mobile-transfer-idempotency-lifecycle.md  README.md
docs/ai/work-items/: README.md
docs/ai/work-items/backend-rustdoc-documentation/: 01-architecture.md  02-implementation.md  03-qa-report.md  04-code-review.md  05-commit-report.md
docs/ai/work-items/financial-gap-closure/: 01-architecture.md  02-implementation.md  04-qa-report.md  05-code-review.md
docs/ai/work-items/full-repository-security-and-quality-remediation/: 01-architecture.md  02-implementation.md  03-qa-report.md  04-code-review.md  (+1 more)
docs/api/: openapi.md
docs/architecture/: concurrency-control.md  financial-ledger.md  idempotency.md  mobile-state-management.md  realtime-feed.md  rust-layering.md
docs/operations/: observability.md  runbook.md
infra/docker/: Dockerfile.api
infra/otel/: config.yaml
infra/postgres/init/: 01-roles.sql
infra/prometheus/: prometheus.yml
scripts/: security-scan.mjs
scripts/performance/: idempotency-replay.js  login-transfer-feed.js  reconcile-after-load.sh  run-k6.mjs  transfer-concurrency.js
(+71 files in other folders)
