[package]
name = "ficus-application"
description = "Ficus application layer — use cases and ports"
version.workspace = true
edition.workspace = true

[dependencies]
ficus-domain.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
utoipa.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
